feat: #46 맴버 산책 횟수 추가